--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Studio Assia | Sinematik Videografi</title>
     <meta name="description"
         content="Profesyonel prodüksiyon ve videografi portfolyosu. Anları sinematik mükemmellikle yakalıyoruz.">
+    <link rel="icon" type="image/jpeg" href="assets/images/studioassialogo.jpg">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +24,9 @@
     <!-- Header / Navigation -->
     <header id="main-header">
         <div class="container">
-            <a href="#" class="logo">STUDIO <span class="accent">ASSIA</span></a>
+            <a href="#" class="logo">
+                <img src="assets/images/studioassialogo.jpg" alt="Studio Assia Logo">
+            </a>
             <nav>
                 <ul class="nav-links">
                     <li><a href="#hero">Anasayfa</a></li>
@@ -64,8 +67,8 @@
             <div class="overlay"></div>
         </div>
         <div class="hero-content container">
-            <h1 class="fade-in">Hareketi & <br> <span class="text-stroke">Duyguyu Yakala</span></h1>
-            <p class="fade-in delay-200">Markalar ve vizyonerler için sinematik hikaye anlatımı.</p>
+            <h1 class="fade-in">STUDIO <br> <span class="text-stroke">ASSIA</span></h1>
+            <p class="fade-in delay-200">Sinematik Videografi & Yaratıcı Prodüksiyon</p>
             <div class="hero-btns fade-in delay-400">
                 <a href="#portfolio" class="btn-primary">Çalışmaları Gör</a>
                 <a href="#contact" class="btn-outline">İletişime Geç</a>
@@ -89,98 +92,62 @@
             <div class="portfolio-filter">
                 <button class="filter-btn active" data-filter="all">Tümü</button>
                 <button class="filter-btn" data-filter="commercial">Reklam</button>
-                <button class="filter-btn" data-filter="music">Müzik Klibi</button>
                 <button class="filter-btn" data-filter="event">Etkinlik</button>
             </div>
 
             <div class="portfolio-grid">
                 <!-- Project 1 -->
-                <div class="portfolio-item" data-category="commercial">
+                <div class="portfolio-item" data-category="commercial" onmouseover="this.querySelector('video').play()"
+                    onmouseout="this.querySelector('video').pause();this.querySelector('video').currentTime=0;">
                     <div class="portfolio-thumb">
-                        <img src="https://placehold.co/600x400/252525/00A8CC?text=Proje+G%C3%B6rseli" alt="Proje 1">
+                        <video muted loop playsinline style="width: 100%; height: 100%; object-fit: cover;">
+                            <source src="assets/videos/superduoreklam2.mp4" type="video/mp4">
+                            Tarayıcınız video etiketini desteklemiyor.
+                        </video>
                         <div class="portfolio-overlay">
                             <div class="portfolio-info">
-                                <h3>Marka Kampanyası 2024</h3>
+                                <h3>Super Duo</h3>
                                 <p class="project-cat">Reklam</p>
-                                <p class="project-desc">Bu proje için kreatif direktörlük ve post-prodüksiyon
-                                    süreçlerini yönettik. Markanın vizyonunu sinematik bir dille anlattık.</p>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 2 -->
-                <div class="portfolio-item" data-category="music">
+                <!-- Project 2 -->
+                <div class="portfolio-item" data-category="commercial" onmouseover="this.querySelector('video').play()"
+                    onmouseout="this.querySelector('video').pause();this.querySelector('video').currentTime=0;">
                     <div class="portfolio-thumb">
-                        <img src="https://placehold.co/600x400/252525/00A8CC?text=Proje+G%C3%B6rseli" alt="Proje 2">
+                        <video muted loop playsinline style="width: 100%; height: 100%; object-fit: cover;">
+                            <source src="assets/videos/galiumreklam2.mp4" type="video/mp4">
+                            Tarayıcınız video etiketini desteklemiyor.
+                        </video>
                         <div class="portfolio-overlay">
                             <div class="portfolio-info">
-                                <h3>Geceler</h3>
-                                <p class="project-cat">Müzik Klibi</p>
-                                <p class="project-desc">Sanatçının yeni teklisi için dinamik ışıklandırma ve hızlı kurgu
-                                    teknikleri kullanarak enerjik bir klip hazırladık.</p>
+                                <h3>Galium</h3>
+                                <p class="project-cat">Reklam</p>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 3 -->
-                <div class="portfolio-item" data-category="event">
+                <div class="portfolio-item" data-category="event" onmouseover="this.querySelector('video').play()"
+                    onmouseout="this.querySelector('video').pause();this.querySelector('video').currentTime=0;">
                     <div class="portfolio-thumb">
-                        <img src="https://placehold.co/600x400/252525/00A8CC?text=Proje+G%C3%B6rseli" alt="Proje 3">
+                        <video muted loop playsinline style="width: 100%; height: 100%; object-fit: cover;">
+                            <source src="assets/videos/holifestvideo.mp4" type="video/mp4">
+                            Tarayıcınız video etiketini desteklemiyor.
+                        </video>
                         <div class="portfolio-overlay">
                             <div class="portfolio-info">
-                                <h3>Yaz Festivali</h3>
+                                <h3>Holifest</h3>
                                 <p class="project-cat">Etkinlik Çekimi</p>
-                                <p class="project-desc">Festivalin coşkusunu ve atmosferini yansıtan, katılımcıların en
-                                    özel anlarını ölümsüzleştiren bir aftermovie çalışması.</p>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Project 4 -->
-                <div class="portfolio-item" data-category="commercial">
-                    <div class="portfolio-thumb">
-                        <img src="https://placehold.co/600x400/252525/00A8CC?text=Proje+G%C3%B6rseli" alt="Proje 4">
-                        <div class="portfolio-overlay">
-                            <div class="portfolio-info">
-                                <h3>Teknoloji Lansmanı</h3>
-                                <p class="project-cat">Reklam</p>
-                                <p class="project-desc">Yeni ürünün özelliklerini vurgulayan, 3D animasyonlar ve
-                                    live-action görüntülerin harmanlandığı tanıtım filmi.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Project 5 -->
-                <div class="portfolio-item" data-category="music">
-                    <div class="portfolio-thumb">
-                        <img src="https://placehold.co/600x400/252525/00A8CC?text=Proje+G%C3%B6rseli" alt="Proje 5">
-                        <div class="portfolio-overlay">
-                            <div class="portfolio-info">
-                                <h3>Akustik Performans</h3>
-                                <p class="project-cat">Müzik Klibi</p>
-                                <p class="project-desc">Doğal ışık ve tek plan çekim tekniği ile sanatçının duygusunu ön
-                                    plana çıkaran samimi bir performans videosu.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Project 6 -->
-                <div class="portfolio-item" data-category="event">
-                    <div class="portfolio-thumb">
-                        <img src="https://placehold.co/600x400/252525/00A8CC?text=Proje+G%C3%B6rseli" alt="Proje 6">
-                        <div class="portfolio-overlay">
-                            <div class="portfolio-info">
-                                <h3>Kurumsal Gala</h3>
-                                <p class="project-cat">Etkinlik Çekimi</p>
-                                <p class="project-desc">Şirketin yıl sonu galasının prestijini ve ihtişamını yansıtan,
-                                    röportajlarla desteklenmiş etkinlik özeti.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
 
 
@@ -223,8 +190,11 @@
         <div class="container icons-wrapper">
             <div class="about-grid">
                 <div class="about-image">
-                    <img src="https://placehold.co/800x1000/252525/00A8CC?text=Profil+Foto%C4%9Fraf%C4%B1"
-                        alt="Videographer Portresi">
+                    <img src="assets/images/assiapp.jpg" alt="Studio Assia Profil">
+                    <div class="experience-badge">
+                        <span class="years">5+</span>
+                        <span class="text">Yıllık<br>Tecrübe</span>
+                    </div>
                 </div>
                 <div class="about-content">
                     <h2>Lensin Arkasındaki <br> Vizyon</h2>
@@ -265,7 +235,8 @@
                         <li><i class="fas fa-map-marker-alt"></i> İstanbul, Türkiye</li>
                     </ul>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/assiacreativemedya/" target="_blank"><i
+                                class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="contact-form-container">
