--- a/index.html
+++ b/index.html
@@ -148,6 +148,23 @@
                     </div>
                 </div>
 
+                <!-- Project 4 -->
+                <div class="portfolio-item" data-category="event" onmouseover="this.querySelector('video').play()"
+                    onmouseout="this.querySelector('video').pause();this.querySelector('video').currentTime=0;">
+                    <div class="portfolio-thumb">
+                        <video muted loop playsinline style="width: 100%; height: 100%; object-fit: cover;">
+                            <source src="assets/videos/yapikredievent.mp4" type="video/mp4">
+                            Tarayıcınız video etiketini desteklemiyor.
+                        </video>
+                        <div class="portfolio-overlay">
+                            <div class="portfolio-info">
+                                <h3>Yapı Kredi Event</h3>
+                                <p class="project-cat">Etkinlik Çekimi</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
 
